lib: Add shared library and code refactor.

--- a/apps/showcase-app/src/index.html
+++ b/apps/showcase-app/src/index.html
@@ -17,6 +17,6 @@
     />
   </head>
   <body>
-    <showcase-ws-root></showcase-ws-root>
+    <showcase-app-root></showcase-app-root>
   </body>
 </html>
